<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="Global_Variables_HMI" Id="{3617b45f-a73a-411c-a813-6211a18dee32}">
    <Declaration><![CDATA[{attribute 'Tc2GvlVarNames'}
VAR_GLOBAL

(*Simulator Screen*)

	bSimulatorPagePopUpFlag 							: BOOL;
	bAutoRecipeCallPage 									: BOOL;

	iRecipeSelectNo										: INT;

	bAutoRecipeBarcodeCallPage 							: BOOL;
	bBarcodePagePopUpFlag 								: BOOL;
	bAutoRecipeBarcodeClosePage 						: BOOL;

	sUserName											: STRING;



(*Yoges's Backup and Restore Apps*)

	restore : BOOL;
	backup : BOOL;
	otherwise : BOOL;
	dont : BOOL;
	ask : BOOL;
	me : BOOL;
	silent_backup : BOOL;


	iScrollbar : INT;

END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>